src/Test/Fixtures/Good/Gates/cu3Let.lf
let qs: [qubit; 2] = CU3(1, 2, 3, q0, q1);