src/Test/Fixtures/Bad/Arrays/unexpectedScalarAfterArrayInitializer.lf
let is: [i32; 3] = [1, 2, 3], 4;